<resources>
    <string name="app_name">WordsFactory</string>
    <string name="no_word">No word</string>
    <string name="input_something_to_find_it_in_dictionary">Input something to find it in dictionary</string>
    <string name="example">Example:</string>
    <string name="part_of_speech">Part of speech:</string>
    <string name="meanings">Meanings:</string>
    <string name="add_to_dictionary">Add to Dictionary</string>
    <string name="network_error">Слово не найдено. Проверьте подключение к интернету.</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dictionary">Dictionary</string>
    <string name="training">Training</string>
    <string name="video">Video</string>
    <string name="sign_up">Sign up</string>
    <string name="create_your_account">Create your account</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="problem_with_get_data_error">Возникла проблема при получении данных</string>
    <string name="ok">ок</string>
    <string name="activity_null">Activity cannot be null</string>
    <string name="success">Success</string>
    <string name="todo_next_activity">Тут будет переход дальше</string>
    <string name="enter_data_error">Некоректные данные</string>
    <string name="other_error">Что-то пошло не так</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learn">Learn anytime and anywhere</string>
    <string name="find">Find a course for you</string>
    <string name="improve">Improve your skills</string>
    <string name="subtitle">Quarantine is the perfect time to spend your day learning something new, from anywhere!</string>
    <string name="next">next</string>
    <string name="content_image">content image</string>
    <string name="navigation_image">navigation image</string>
    <string name="start">Let\'s start</string>
    <string name="skip">Skip</string>
    <string name="error_message">Возникла проблема при получении данных</string>
    <string name="wordsfactory">WordsFactory</string>
    <string name="start2">Start</string>
    <string name="there_are">There are</string>
    <string name="count_words_end">words \nin your Dictionary.\n\nStart the Training?</string>
    <string name="add_word_in_dictionary">Добавьте слова в словарь</string>
    <string name="go">GO!</string>
    <string name="go_next_activity">Тут будет переход дальше!</string>
    <string name="a">A.</string>
    <string name="b">B.</string>
    <string name="c">C.</string>
    <string name="of">of</string>
    <string name="training_is_finished">Training is finished</string>
    <string name="correct">Correct:</string>
    <string name="incorrect">Incorrect:</string>
    <string name="again">Again</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Widget show count words in dictionary</string>
    <string name="widgetTitle">WordsFactory</string>
    <string name="my_dictionary">My dictionary</string>
    <string name="i_already_remember">I already remember</string>
    <string name="words">words</string>
</resources>