<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.WordsFactory.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    android:theme="@style/Theme.WordsFactory.AppWidgetContainer">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@drawable/widget_title_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/widgetTitle"
            android:textColor="@color/white"
            android:textSize="32sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/title_count_words_in_dictionary_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="16sp"
        android:layout_marginTop="20dp"
        android:text="@string/my_dictionary"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/count_words_in_dictionary_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/title_count_words_in_dictionary_title"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/widget_value"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/title_count_words_remember_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_count_words_in_dictionary_title"
        android:layout_marginStart="16sp"
        android:layout_marginTop="20dp"
        android:text="@string/i_already_remember"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/count_words_learned_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/title_count_words_remember_title"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:textSize="14sp" />
</RelativeLayout>