<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.OnBoardingScreensActivity">

    <Button
        android:id="@+id/button_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_element"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:background="@color/button_skip_color"
        android:clickable="true"
        android:text="@string/skip"
        android:textColor="@color/dark_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true" >

    </androidx.viewpager2.widget.ViewPager2>

    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/margin_horizontal_button"
        android:layout_marginBottom="@dimen/margin_bottom_parent"
        android:background="@drawable/round_button"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/position1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_element"
        android:layout_marginEnd="@dimen/margin_between_navigation_element"
        android:background="@drawable/ic_tab"
        android:contentDescription="@string/navigation_image"
        app:layout_constraintBottom_toBottomOf="@id/position3"
        app:layout_constraintEnd_toStartOf="@+id/position2" />

    <ImageView
        android:id="@+id/position2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_element"
        android:background="@drawable/ic_tab"
        android:contentDescription="@string/navigation_image"
        app:layout_constraintBottom_toBottomOf="@id/position3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/position3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_between_navigation_element"
        android:layout_marginTop="@dimen/margin_top_between_element"
        android:layout_marginBottom="@dimen/onboarding_margin_bottom"
        android:background="@drawable/ic_tab"
        android:contentDescription="@string/navigation_image"
        app:layout_constraintBottom_toTopOf="@id/button_next"
        app:layout_constraintStart_toEndOf="@+id/position2" />


</androidx.constraintlayout.widget.ConstraintLayout>