<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fragment_collection_object_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_parent"
        android:contentDescription="@string/content_image"
        app:layout_constraintBottom_toTopOf="@+id/fragment_collection_object_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_collection_object_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_element"
        android:layout_marginBottom="@dimen/margin_small"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/dark_title"
        app:layout_constraintBottom_toTopOf="@+id/fragment_collection_object_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_collection_object_image" />

    <TextView
        android:id="@+id/fragment_collection_object_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/textview_margin_horizontal"
        android:gravity="center"
        android:textSize="@dimen/subtitle_text_size"
        android:textColor="@color/dark_gray_subtitle"
        app:layout_constraintBottom_toTopOf="@+id/fragment_collection_object_position1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_collection_object_title" />

    <ImageView
        android:id="@+id/fragment_collection_object_position1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_element"
        android:layout_marginEnd="@dimen/margin_between_navigation_element"
        android:background="@drawable/ic_tab"
        android:contentDescription="@string/navigation_image"
        app:layout_constraintEnd_toStartOf="@+id/fragment_collection_object_position2"
        app:layout_constraintTop_toBottomOf="@+id/fragment_collection_object_subtitle" />

    <ImageView
        android:id="@+id/fragment_collection_object_position2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_element"
        android:background="@drawable/ic_tab"
        android:contentDescription="@string/navigation_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_collection_object_subtitle" />

    <ImageView
        android:id="@+id/fragment_collection_object_position3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_between_navigation_element"
        android:layout_marginTop="@dimen/margin_top_between_element"
        android:background="@drawable/ic_tab"
        android:contentDescription="@string/navigation_image"
        app:layout_constraintStart_toEndOf="@+id/fragment_collection_object_position2"
        app:layout_constraintTop_toBottomOf="@+id/fragment_collection_object_subtitle" />

    <Button
        android:id="@+id/fragment_collection_object_button_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/margin_horizontal_button"
        android:layout_marginBottom="@dimen/margin_bottom_parent"
        android:background="@drawable/round_button"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>